--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,18 @@ name = "kirby-speedscore-recorders"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
-crate-type = ["cdylib", "rlib"]
+[[bin]]
+name = "server"
+path = "src/main.rs"
+
+[[bin]]
+name = "client"
+path = "src/client.rs"
+
+[workspace]
+members = [
+    "client",
+    "server"
+]
 
 [dependencies]
-rocket = "0.5.0"
-yew = "0.17"
-wasm-bindgen = "0.2"
