--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,7 @@
-[package]
-name = "kirby-speedscore-recorders"
-version = "0.1.0"
-edition = "2021"
-
-[[bin]]
-name = "server"
-path = "src/main.rs"
-
-[[bin]]
-name = "client"
-path = "src/client.rs"
-
 [workspace]
 members = [
     "client",
+    "common",
     "server"
 ]
-
-[dependencies]
+resolver="2"
