--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "server"
+name = "kssrs_server"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,3 +9,4 @@ edition = "2021"
 rocket = "0.5.0"
 serde = "1.0.197"
 serde_json = "1.0.115"
+kssrs_common = { path = "../common" }
