--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "kirby-speedscore-recorders_client"
+name = "kssrs_client"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,3 +8,8 @@ edition = "2021"
 [dependencies]
 yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
 kssrs_common = { path = "../common" }
+
+gloo-net = "0.2"
+web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
