--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -14,3 +14,4 @@ gloo-timers = "0.3.0"
 web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
+gloo-console = "0.3.0"
